change sidbar navigations

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -54,11 +54,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="bi bi-bar-chart"></i> Analytics
+                        <a class="nav-link" href="/pages/login.html">
+                            <i class="bi bi-bar-chart"></i>Login
                         </a>
                     </li>
-                    <!-- Add more sidebar items here -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/registration.html">
+                            <i class="bi bi-bar-chart"></i>Create Account
+                        </a>
+                    </li>
+                    
                 </ul>
             </div>
         </nav>
