--- a/pages/login.html
+++ b/pages/login.html
@@ -27,7 +27,7 @@
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Enter your password">
                         </div>
-
+                    <!-- add login button and popup dashboard -->
                         <button type="submit" class="btn btn-primary" onclick="userLogin()">Login</button>
                         <a href="/pages/registration.html">Sign-up</a>
                     </form>
